@@ -1,3 +1,4 @@
+  - Add a site-specific extractor for www.mdnkids.com
   - Add a site-specific extractor for www.ustv.com.tw
 
 v0.33.0 2020-07-22T06:44:18+0800
